increase navigation padding to address visibility issues

--- a/doc-site/styles/docs/doc_template.scss
+++ b/doc-site/styles/docs/doc_template.scss
@@ -188,7 +188,7 @@ html.-spirit-no-scroll {
   display: block;
   height: calc(100vh - #{$spirit-doc-header-height});
   overflow: hidden;
-  padding-bottom: $spirit-space-generic-2-x;
+  padding-bottom: $spirit-space-generic-8-x;
   padding-top: $spirit-space-generic-2-x;
   position: fixed;
   right: 0;
